--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+#version: "3.8"
 name: droidhead
 networks: { droidnet: { driver: bridge } }
 services:
@@ -17,15 +17,17 @@ services:
     env_file: .env
     environment:
       - STUDENTS_CONFIG=/app/app/config.yaml
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=all
+      # NVIDIA runtime disabled for macOS compatibility
+      # - NVIDIA_VISIBLE_DEVICES=all
+      # - NVIDIA_DRIVER_CAPABILITIES=all
     depends_on: [mqtt, llm, asr, tts]
     ports: ["8000:8000"]
-    devices:
-      - "${CAMERA_DEVICE:-/dev/video0}:${CAMERA_DEVICE:-/dev/video0}"
-      - "/dev/snd:/dev/snd"
-      - "${I2C_BUS:-/dev/i2c-1}:${I2C_BUS:-/dev/i2c-1}"
-    runtime: nvidia
+    # Device mappings disabled for macOS compatibility
+    # devices:
+    #   - "${CAMERA_DEVICE:-/dev/video0}:${CAMERA_DEVICE:-/dev/video0}"
+    #   - "/dev/snd:/dev/snd"
+    #   - "${I2C_BUS:-/dev/i2c-1}:${I2C_BUS:-/dev/i2c-1}"
+    # runtime: nvidia
   llm:
     build: ./students/llm
     container_name: student-llm
@@ -33,9 +35,9 @@ services:
     networks: [droidnet]
     env_file: .env
     environment:
-      - OAI_BASE_URL=${OAI_BASE_URL}
-      - OAI_API_KEY=${OAI_API_KEY}
-      - OAI_MODEL=${OAI_MODEL}
+      - OAI_BASE_URL=http://127.0.0.1:11434/v1
+      - OAI_API_KEY=
+      - OAI_MODEL=llama3.2:3b
     ports: ["8080:8080"]
   asr:
     build: ./students/asr
@@ -44,12 +46,12 @@ services:
     networks: [droidnet]
     env_file: .env
     environment:
-      - ASR_MODEL_SIZE=${ASR_MODEL_SIZE}
-      - ASR_DEVICE=${ASR_DEVICE}
-      - ASR_BEAM_SIZE=${ASR_BEAM_SIZE}
-      - ASR_COMPUTE_TYPE=${ASR_COMPUTE_TYPE}
+      - ASR_MODEL_SIZE=${ASR_MODEL_SIZE:-base}
+      - ASR_DEVICE=${ASR_DEVICE:-cpu}
+      - ASR_BEAM_SIZE=${ASR_BEAM_SIZE:-5}
+      - ASR_COMPUTE_TYPE=${ASR_COMPUTE_TYPE:-int8}
     ports: ["9000:9000"]
-    runtime: nvidia
+    # runtime: nvidia  # Disabled for macOS compatibility
   tts:
     build: ./students/tts
     container_name: student-tts
@@ -63,11 +65,12 @@ services:
     restart: unless-stopped
     networks: [droidnet]
     env_file: .env
-    devices:
-      - "${CAMERA_DEVICE:-/dev/video0}:${CAMERA_DEVICE:-/dev/video0}"
+    # Device mappings disabled for macOS compatibility
+    # devices:
+    #   - "${CAMERA_DEVICE:-/dev/video0}:${CAMERA_DEVICE:-/dev/video0}"
     command: ["-W","1280","-H","720","-F","15","${CAMERA_DEVICE:-/dev/video0}"]
     ports: ["${RTSP_PORT:-8554}:8554"]
-    runtime: nvidia
+    # runtime: nvidia  # Disabled for macOS compatibility
   periph:
     build: ./students/periph
     container_name: student-periph
@@ -75,9 +78,10 @@ services:
     networks: [droidnet]
     privileged: true
     env_file: .env
-    devices:
-      - "${I2C_BUS:-/dev/i2c-1}:${I2C_BUS:-/dev/i2c-1}"
-      - "/dev/snd:/dev/snd"
+    # Device mappings disabled for macOS compatibility
+    # devices:
+    #   - "${I2C_BUS:-/dev/i2c-1}:${I2C_BUS:-/dev/i2c-1}"
+    #   - "/dev/snd:/dev/snd"
     depends_on: [mqtt]
   webui:
     build: ./webui
