--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,6 @@ services:
       DB_POSTGRESDB_USER: "n8n"
       DB_POSTGRESDB_PASSWORD: "n8n"
 
-      # Optional: so webhooks work locally
       N8N_EDITOR_BASE_URL: "http://localhost:5678"
       N8N_PUBLIC_URL: "http://localhost:5678"
 
@@ -39,11 +38,14 @@ services:
       - n8n_data:/home/node/.n8n
 
   gpt-oss:
-    image: gpt-oss-20b:latest   # <— your local image
+    image: docker.io/org/gpt-oss:20b
     restart: unless-stopped
     ports:
-      - "8080:8080"                         # exposed on localhost:8080 in Docker Desktop
+      - "8000:8000"
+    volumes:
+      - gptoss_data:/data
 
 volumes:
   n8n_postgres_data:
   n8n_data:
+  gptoss_data:
